[gd_scene load_steps=15 format=3 uid="uid://wtw6jglarxdd"]

[ext_resource type="Script" uid="uid://b74ykvi2nk3e0" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://y4a2t5rh5k47" path="res://images/Free Industrial Zone Tileset/2 Background/Background.png" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://da6ss0rxv2k06" path="res://Fonts/elektrix-wizards-font/MgfElektrixWizardsPersonalUse-KVR9l.otf" id="2_bqqt6"]
[ext_resource type="FontFile" uid="uid://dv4xanc3p7ue2" path="res://Fonts/cyber-alert/Cyber Alert.otf" id="4_wu84c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("1_ekxnf")
modulate_color = Color(1, 1, 1, 0.41960785)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0.5014065, 0.50140655, 0.50140643, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0.5019608, 0.5019608, 0.5019608, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbmy8"]
bg_color = Color(0.65882355, 0.65882355, 0.65882355, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk1qb"]
bg_color = Color(0.65882355, 0.65882355, 0.65882355, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dd4i"]
bg_color = Color(0.65882355, 0.65882355, 0.65882355, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgwnu"]
bg_color = Color(0.65882355, 0.65882355, 0.65882355, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.44705883)
shadow_size = 5
shadow_offset = Vector2(0, 1.56)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_flqon"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -70.0
offset_right = 234.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_5dd4i")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_lgwnu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_flqon")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_5dd4i")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_lgwnu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_flqon")
text = "Credits"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_5dd4i")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_lgwnu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_flqon")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -247.0
offset_right = 145.5
offset_bottom = -152.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 90
text = "Neon Jump Cube"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Exit_pressed"]
